# car-price-ml

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py
docs/: index.html
docs/app/: app.js  index.html  styles.css
docs/research/: data-and-methodology.md
notebooks/: 01_eda_and_model.ipynb
src/car_price_ml/: __init__.py  config.py  data.py  features.py  model.py  report.py  train.py
tests/: test_api.py  test_data.py  test_features.py  test_frontend.py  test_model.py
