[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "car-price-ml"
version = "0.1.0"
description = "Used-car price prediction for the Polish market — EDA, model comparison, FastAPI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.5,<2",
    "lightgbm>=4.3,<5",
    "matplotlib>=3.9,<4",
    "seaborn>=0.13,<0.14",
    "shap>=0.46,<0.50",
    "joblib>=1.4,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9",
    "httpx>=0.27,<1",
    "jupyterlab>=4.2,<5",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
